# adlet

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  benchmarkit.py
.github/workflows/: ci.yml
benchmarks/: benchmark.cpp  benchmark_einsum.cpp  benchmark_einsum.hpp  benchmark_einsum_prop.cpp  benchmark_einsum_prop.hpp  benchmark_format.cpp  benchmark_format.hpp  benchmark_graph.cpp  benchmark_graph.hpp  benchmark_proptime.cpp  benchmark_proptime.hpp  einsum.hpp  format.hpp  formats.hpp  graph.hpp  main.cpp
benchmarks/analysis/: bert-like.ipynb  einsum-Copy1.ipynb  einsum.ipynb  graph.dot  graph.ipynb  parameterized.ipynb  prop.ipynb  requirements.txt  run_graph.py
benchmarks/analysis/einsum-data/: 1-6_0.3_memonly.csv  1-6_0.5_memonly.csv  12_0.3_memonly.csv  12_0.5_memonly.csv  12_0.7_memonly.csv  12_0.9_memonly.csv  12_30_10_prop.csv  12_30_5_complete.csv  12_50_10_prop.csv  12_50_5_complete.csv  12_70_10_prop.csv  12_70_5_complete.csv  12_90_10_prop.csv  12_90_5_complete.csv  13.txt  13_0.3_prop.csv  13_0.5_prop.csv  13_0.7_prop.csv  13_0.9_prop.csv  13_30_5_complete.txt  13_50_5_complete.txt  13_70_5_complete.txt  13_90_5_complete.txt  7-12_0.3_memonly.csv  7-12_0.5_memonly.csv  7-12_0.7_memonly.csv  7-12_0.9_memonly.csv  inner_200_asymptotic.csv  runtime_analysis_data.csv  runtime_data.csv  str_matrix_chain_multiplication_1000.csv  str_nw_ftps_open_28.csv
benchmarks/analysis/graph-data/: bert-col-10.csv  bert-col-5.txt  bert-row-10.csv  bert-row-5.txt  bert-row-col-10.csv  bert-row-col-5.txt
benchmarks/formats/: run.hpp
benchmarks/formats/.ipynb_checkpoints/: left_format-checkpoint.csv  sparse_sparse-checkpoint.csv
benchmarks/formats/analysis/: format_selection.ipynb  sparse_sparse.csv
benchmarks/scripts/: einsum.py  formats.py  qc_circuit_n49_m14_s9_e6_pEFGH_simplified.txt  requirements.txt  run_einsum.py  run_graph.py  test.txt
einsum-dataset/: gm_queen5_5_3.wcsp.txt  lm_batch_likelihood_brackets_3_16d.txt  lm_batch_likelihood_sentence_3_12d.txt  lm_batch_likelihood_sentence_4_4d.txt  lm_batch_likelihood_sentence_4_8d.txt  str_matrix_chain_multiplication_100.txt  str_matrix_chain_multiplication_1000.txt  str_mps_varying_inner_product_200.txt  str_nw_ftps_open_28.txt  str_nw_ftps_open_30.txt  str_nw_mera_closed_120.txt  str_nw_mera_open_26.txt
include/: einsum.hpp  graph.hpp  node.hpp  tensor.hpp  tests.hpp  utils.hpp  viz.hpp
scripts/: artifact.py  einsum.py  formats.py  plot.py  requirements.txt  run.py  run_einsum.py  run_formats.py  run_graph.py  run_proptime.py
src/: dot.hpp  einsum.cpp  einsum.hpp  graph.cpp  graph.hpp  main.cpp  node.cpp  tensor.cpp  tests.cpp  utils.cpp  utils.hpp  viz.cpp
tesa-prop/: tesa-prop.cpp
tesa-prop/propagation/: TeSA.cpp  TeSA.hpp  propagate.cpp  propagate.hpp  utils.cpp  utils.hpp
